loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:1: error: not found: value &&
while (getX() != 14) && (getY() != 8) {
                     ^